--- a/output-analysis/error_analysis.ipynb
+++ b/output-analysis/error_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,14 @@
     "from pathlib import Path\n",
     "from scipy import stats\n",
     "\n",
+    "from os import getenv\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "demographics_sheet = pd.read_csv(INTERMEDIATE_PRODUCTS_DIR / 'demographics_sheet.csv')\n",
-    "baseline_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'outcome_prediction_res.pkl')\n",
-    "weightavg_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'outcome_prediction_weightaverage_res.pkl') \n",
-    "softvote_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'outcome_prediction_softvote_res.pkl')"
+    "\n",
+    "demographics_sheet = pd.read_csv(Path(getenv(\"MIMIC_3_DIR\")) / 'demographics_sheet.csv')\n",
+    "baseline_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'umlsbert_baseline_mor_results.pkl')\n",
+    "weightavg_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'umlsbert_wgtavg_mor_results.pkl') \n",
+    "softvote_results = pd.read_pickle(INTERMEDIATE_PRODUCTS_DIR / 'umlsbert_softvote_mor_results.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -576,26 +579,24 @@
      "text": [
       "                                 OLS Regression Results                                \n",
       "=======================================================================================\n",
-      "Dep. Variable:      squared_err_delta   R-squared (uncentered):                   0.016\n",
-      "Model:                            OLS   Adj. R-squared (uncentered):              0.016\n",
-      "Method:                 Least Squares   F-statistic:                              52.94\n",
-      "Date:                Tue, 12 Dec 2023   Prob (F-statistic):                    6.19e-34\n",
-      "Time:                        16:40:40   Log-Likelihood:                          11669.\n",
-      "No. Observations:                9788   AIC:                                 -2.333e+04\n",
-      "Df Residuals:                    9785   BIC:                                 -2.331e+04\n",
-      "Df Model:                           3                                                  \n",
+      "Dep. Variable:      squared_err_delta   R-squared (uncentered):                   0.031\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.031\n",
+      "Method:                 Least Squares   F-statistic:                              284.5\n",
+      "Date:                Tue, 09 Jan 2024   Prob (F-statistic):                    7.72e-63\n",
+      "Time:                        16:11:56   Log-Likelihood:                          11522.\n",
+      "No. Observations:                8764   AIC:                                 -2.304e+04\n",
+      "Df Residuals:                    8763   BIC:                                 -2.303e+04\n",
+      "Df Model:                           1                                                  \n",
       "Covariance Type:            nonrobust                                                  \n",
-      "====================================================================================\n",
-      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------------\n",
-      "GENDER               0.0081      0.002      4.255      0.000       0.004       0.012\n",
-      "ETHNICITY_BINNED     0.0116      0.001      8.626      0.000       0.009       0.014\n",
-      "GEND*ETH            -0.0102      0.003     -3.918      0.000      -0.015      -0.005\n",
       "==============================================================================\n",
-      "Omnibus:                     1928.575   Durbin-Watson:                   1.976\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            13329.037\n",
-      "Skew:                           0.769   Prob(JB):                         0.00\n",
-      "Kurtosis:                       8.506   Cond. No.                         4.90\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "GENDER         0.0156      0.001     16.867      0.000       0.014       0.017\n",
+      "==============================================================================\n",
+      "Omnibus:                     3096.431   Durbin-Watson:                   1.966\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            14643.899\n",
+      "Skew:                           1.657   Prob(JB):                         0.00\n",
+      "Kurtosis:                       8.396   Cond. No.                         1.00\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -608,9 +609,9 @@
     "# want to 1-hot encode our demographics, then run a regression on them\n",
     "# relevant = merged[(40 < merged['AGE']) & (merged['AGE'] <= 60)]\n",
     "# relevant = merged_relevant\n",
-    "relevant = merged\n",
-    "insurance_dummies = pd.get_dummies(relevant['INSURANCE'])\n",
-    "eth_dummies = pd.get_dummies(relevant['ETHNICITY_BINNED'])\n",
+    "relevant = merged[merged['MOR'] == 0]\n",
+    "insurance_dummies = pd.get_dummies(relevant['INSURANCE']).astype(int)\n",
+    "eth_dummies = pd.get_dummies(relevant['ETHNICITY_BINNED']).astype(int)\n",
     "gender_dummies = pd.get_dummies(relevant['GENDER'])\n",
     "# all_dep = pd.concat([insurance_dummies, eth_dummies, gender_dummies], axis=1)\n",
     "# 0 if male, 1 if female\n",
@@ -619,7 +620,7 @@
     "eth_binary_dummy = relevant['ETHNICITY_BINNED'].map(lambda eth: int(eth == 'white'))\n",
     "gend_eth_interact = gend_input * eth_binary_dummy\n",
     "gend_eth_interact.name = \"GEND*ETH\"\n",
-    "all_dep = pd.concat([gend_input, eth_binary_dummy, gend_eth_interact], axis=1)\n",
+    "all_dep = pd.concat([gend_input], axis=1)\n",
     "estimator = sm.OLS(relevant['squared_err_delta'], all_dep)\n",
     "estimated = estimator.fit()\n",
     "print(estimated.summary())"
