--- a/output-analysis/error_analysis.ipynb
+++ b/output-analysis/error_analysis.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -579,24 +579,24 @@
      "text": [
       "                                 OLS Regression Results                                \n",
       "=======================================================================================\n",
-      "Dep. Variable:      squared_err_delta   R-squared (uncentered):                   0.031\n",
-      "Model:                            OLS   Adj. R-squared (uncentered):              0.031\n",
-      "Method:                 Least Squares   F-statistic:                              284.5\n",
-      "Date:                Tue, 09 Jan 2024   Prob (F-statistic):                    7.72e-63\n",
-      "Time:                        16:11:56   Log-Likelihood:                          11522.\n",
-      "No. Observations:                8764   AIC:                                 -2.304e+04\n",
-      "Df Residuals:                    8763   BIC:                                 -2.303e+04\n",
+      "Dep. Variable:      squared_err_delta   R-squared (uncentered):                   0.008\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.008\n",
+      "Method:                 Least Squares   F-statistic:                              83.44\n",
+      "Date:                Tue, 09 Jan 2024   Prob (F-statistic):                    7.86e-20\n",
+      "Time:                        16:15:34   Log-Likelihood:                          11631.\n",
+      "No. Observations:                9788   AIC:                                 -2.326e+04\n",
+      "Df Residuals:                    9787   BIC:                                 -2.325e+04\n",
       "Df Model:                           1                                                  \n",
       "Covariance Type:            nonrobust                                                  \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "GENDER         0.0156      0.001     16.867      0.000       0.014       0.017\n",
+      "GENDER         0.0091      0.001      9.135      0.000       0.007       0.011\n",
       "==============================================================================\n",
-      "Omnibus:                     3096.431   Durbin-Watson:                   1.966\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            14643.899\n",
-      "Skew:                           1.657   Prob(JB):                         0.00\n",
-      "Kurtosis:                       8.396   Cond. No.                         1.00\n",
+      "Omnibus:                     1920.438   Durbin-Watson:                   1.967\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            13294.768\n",
+      "Skew:                           0.764   Prob(JB):                         0.00\n",
+      "Kurtosis:                       8.501   Cond. No.                         1.00\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -609,7 +609,7 @@
     "# want to 1-hot encode our demographics, then run a regression on them\n",
     "# relevant = merged[(40 < merged['AGE']) & (merged['AGE'] <= 60)]\n",
     "# relevant = merged_relevant\n",
-    "relevant = merged[merged['MOR'] == 0]\n",
+    "relevant = merged\n",
     "insurance_dummies = pd.get_dummies(relevant['INSURANCE']).astype(int)\n",
     "eth_dummies = pd.get_dummies(relevant['ETHNICITY_BINNED']).astype(int)\n",
     "gender_dummies = pd.get_dummies(relevant['GENDER'])\n",
@@ -621,6 +621,54 @@
     "gend_eth_interact = gend_input * eth_binary_dummy\n",
     "gend_eth_interact.name = \"GEND*ETH\"\n",
     "all_dep = pd.concat([gend_input], axis=1)\n",
+    "estimator = sm.OLS(relevant['squared_err_delta'], all_dep)\n",
+    "estimated = estimator.fit()\n",
+    "print(estimated.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:      squared_err_delta   R-squared:                       0.001\n",
+      "Model:                            OLS   Adj. R-squared:                  0.000\n",
+      "Method:                 Least Squares   F-statistic:                     1.203\n",
+      "Date:                Tue, 09 Jan 2024   Prob (F-statistic):              0.305\n",
+      "Time:                        16:15:36   Log-Likelihood:                 11685.\n",
+      "No. Observations:                9788   AIC:                        -2.336e+04\n",
+      "Df Residuals:                    9782   BIC:                        -2.331e+04\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "GENDER        -0.0021      0.001     -1.382      0.167      -0.005       0.001\n",
+      "Government     0.0053      0.004      1.216      0.224      -0.003       0.014\n",
+      "Medicaid       0.0121      0.003      4.565      0.000       0.007       0.017\n",
+      "Medicare       0.0121      0.001      9.608      0.000       0.010       0.015\n",
+      "Private        0.0100      0.002      6.162      0.000       0.007       0.013\n",
+      "Self Pay       0.0106      0.008      1.305      0.192      -0.005       0.027\n",
+      "==============================================================================\n",
+      "Omnibus:                     1919.392   Durbin-Watson:                   1.977\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            13503.660\n",
+      "Skew:                           0.759   Prob(JB):                         0.00\n",
+      "Kurtosis:                       8.550   Cond. No.                         10.4\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_dep = pd.concat([gend_input, insurance_dummies], axis=1)\n",
     "estimator = sm.OLS(relevant['squared_err_delta'], all_dep)\n",
     "estimated = estimator.fit()\n",
     "print(estimated.summary())"
